src/test/deca/syntax/invalid/parser/oracle/method_asm_multi_string4.deca
class A { a a () asm ("LOAD
			READ
			WRITE
			READ
			WRITE
			READ
			WRITE
			READ
			WRITE
			READ
			WRITE
			READ
			WRITE\\\"); }